--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.junit</groupId>
+      <artifactId>junit4-runner</artifactId>
+      <version>5.0.0-ALPHA</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>28.1-jre</version>
