--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,28 @@
     <relativePath/>
   </parent>
   <groupId>com.dchampion</groupId>
-  <artifactId>http</artifactId>
-  <version>1.0.0</version>
+  <artifactId>spring</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   <name>http</name>
-  <description>Java / Spring Boot HTTP framework with Angular Client</description>
+  <description>Java/Spring Boot HTTP Framework</description>
   <properties>
     <java.version>12</java.version>
   </properties>
   <dependencies>
+
     <dependency>
       <groupId>org.junit</groupId>
       <artifactId>junit4-runner</artifactId>
       <version>5.0.0-ALPHA</version>
     </dependency>
+
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>28.1-jre</version>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
