--- a/pom.xml
+++ b/pom.xml
@@ -1,62 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.2.RELEASE</version>
-    <relativePath/>
+      <version>2.2.2.RELEASE</version>
+      <relativePath/>
   </parent>
-  <groupId>com.dchampion</groupId>
-  <artifactId>spring</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>http</name>
-  <description>Java/Spring Boot HTTP Framework</description>
-  <properties>
-    <java.version>12</java.version>
-  </properties>
-  <dependencies>
-
-    <dependency>
-      <groupId>org.junit</groupId>
-      <artifactId>junit4-runner</artifactId>
-      <version>5.0.0-ALPHA</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>28.1-jre</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-rest</artifactId>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
+  <groupId>com.championd</groupId>
+  <artifactId>http</artifactId>
+  <version>1.0.0</version>
+  <name>HTTP client and server</name>
+  <description>Java / Spring Boot HTTP framework with Angular client</description>
+  <packaging>pom</packaging>
+  <modules>
+    <module>client</module>
+    <module>server</module>
+  </modules>
 </project>
