--- a/server/pom.xml
+++ b/server/pom.xml
@@ -63,7 +63,7 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/classes/resources/static/</outputDirectory>
+              <outputDirectory>${project.build.directory}/classes/static/</outputDirectory>
               <resources>
                 <resource>
                   <directory>${project.parent.basedir}/client/dist/</directory>
