--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.0</version>
   </parent>
   <groupId>com.dchampion.http</groupId>
-  <artifactId>client</artifactId>
+  <artifactId>http-client</artifactId>
   <version>1.0.0</version>
   <name>HTTP client</name>
   <description>Angular client for Java / Spring Boot HTTP framework</description>
@@ -18,8 +18,7 @@
         <artifactId>frontend-maven-plugin</artifactId>
         <version>1.9.1</version>
         <configuration>
-          <nodeVersion>v12.14.0</nodeVersion>
-          <npmVersion>6.13.4</npmVersion>
+          <nodeVersion>v12.14.1</nodeVersion>
           <workingDirectory>./</workingDirectory>
         </configuration>
         <executions>
