Spruce up documentation (Javadocs and README).

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,6 +11,7 @@
   <version>1.0.0</version>
   <name>HTTP client</name>
   <description>Angular client for Java / Spring Boot HTTP framework</description>
+  <packaging>pom</packaging>
   <build>
     <plugins>
       <plugin>
