--- a/client/pom.xml
+++ b/client/pom.xml
@@ -35,16 +35,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install</arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>npm run build</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <configuration>
-              <arguments>run build</arguments>
+              <arguments>install --no-fund --no-optional --ignore-scripts</arguments>
             </configuration>
           </execution>
           <execution>
