And again (change "npm install" to "npm ci" as the latter promises not to change package-lock.json).

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -35,7 +35,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install --no-fund --no-optional --ignore-scripts</arguments>
+              <arguments>ci --no-fund --no-optional --ignore-scripts</arguments>
             </configuration>
           </execution>
           <execution>
