--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.dchampion</groupId>
     <artifactId>http</artifactId>
     <version>1.0.0</version>
   </parent>
+
   <groupId>com.dchampion.http</groupId>
   <artifactId>http-server</artifactId>
   <version>1.0.0</version>
   <name>HTTP server</name>
   <description>Java / Spring Boot HTTP framework</description>
   <packaging>jar</packaging>
+
   <properties>
     <java.version>12</java.version>
   </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>com.dchampion</groupId>
+      <artifactId>framework</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit</groupId>
       <artifactId>junit4-runner</artifactId>
       <version>5.0.0-ALPHA</version>
     </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>28.1-jre</version>
-    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -41,18 +48,21 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-rest</artifactId>
       <scope>compile</scope>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <executions>
@@ -73,14 +83,11 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.1.1</version>
-        <configuration>
-          <!--show>private</show-->
-          <!--nohelp>true</nohelp-->
-        </configuration>
       </plugin>
     </plugins>
   </build>
