--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,15 +4,15 @@
 
   <parent>
     <groupId>com.dchampion</groupId>
-    <artifactId>http</artifactId>
+    <artifactId>framework-demo</artifactId>
     <version>1.0.0</version>
   </parent>
 
-  <groupId>com.dchampion.http</groupId>
-  <artifactId>http-client</artifactId>
+  <groupId>com.dchampion.framework-demo</groupId>
+  <artifactId>client</artifactId>
   <version>1.0.0</version>
-  <name>HTTP client</name>
-  <description>Angular client for Java / Spring Boot HTTP framework</description>
+  <name>Framework demo client</name>
+  <description>Angular client for Java / Spring Boot framework</description>
   <packaging>pom</packaging>
 
   <build>
