WIP: Add persistence.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,4 +3,13 @@
 # of cases. "shared" should be used if multiple instances of this process can exist
 # simultaneously; e.g. in a containerized runtime environment.
 async.response_cache.scope=in-process
-# async.response_cache.scope=shared
+#async.response_cache.scope=shared
+
+spring.datasource.url=jdbc:h2:mem:framework-demo-db;INIT=runscript from 'classpath:data.sql'
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.h2.console.enabled=true
