Added Javadoc and logging.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,15 +1,21 @@
-# AsyncRequestHandler properties...
 # Scope of response cache. "in-process" is the default, and can be used in the majority
 # of cases. "shared" should be used if multiple instances of this process can exist
 # simultaneously; e.g. in a containerized runtime environment.
 async.response_cache.scope=in-process
 #async.response_cache.scope=shared
 
+# Creates an in-memory h2 database called, and executes DDL in "data.sql"
+# to create a schema and objects.
 spring.datasource.url=jdbc:h2:mem:framework-demo-db;INIT=runscript from 'classpath:data.sql'
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# The following line prevents annotation-based generation of schema
+# objects (e.g. tables), instead deferring DDL to script referenced
+# after "INIT=" prefix in "spring.datasource.url" property.
 spring.jpa.hibernate.ddl-auto=none
 
+# Enables the h2 console, browsable at http://localhost:8080/h2-console.
 spring.h2.console.enabled=true
