WIP: Add front-end support for authentication.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -19,3 +19,15 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Enables the h2 console, browsable at http://localhost:8080/h2-console.
 spring.h2.console.enabled=true
+
+# TLS settings
+#server.ssl.key-store=classpath:framework-keystore.pfx
+#server.ssl.key-store-type=pkcs12
+#server.ssl.key-store-password=blah123
+#server.port=8443
+#server.ssl.key-password=blah123
+#server.ssl.key-alias=medium
+
+# Actuator endpoints
+management.port=8081
+management.security.enabled=false
