--- a/server/pom.xml
+++ b/server/pom.xml
@@ -66,6 +66,11 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
     <!-- BEGIN: Manual dependency upgrades to address security vulnerabilities -->
     <dependency>
       <groupId>org.springframework</groupId>
