WIP: Work on user registration.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,13 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <!--version>5.3.1.RELEASE</version-->
+    </dependency>
+
+
     <!-- BEGIN: Manual dependency upgrades to address security vulnerabilities -->
     <dependency>
       <groupId>org.springframework</groupId>
