--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -31,3 +31,7 @@ spring.h2.console.enabled=true
 # Actuator endpoints
 management.port=8081
 management.security.enabled=false
+
+# Framework Demo-specific properties
+framework-demo.breach-api-uri-root=https://api.pwnedpasswords.com/range/
+framework-demo.breach-api-hash-algo=SHA-1
