WIP: Start work on authentication.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -35,3 +35,4 @@ management.security.enabled=false
 # Framework Demo-specific properties
 framework-demo.breach-api-uri-root=https://api.pwnedpasswords.com/range/
 framework-demo.breach-api-hash-algo=SHA-1
+framework-demo.bcrypt-strength=12
