Move common identity and access management features down into the framework.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-# Scope of response cache. "in-process" is the default, and can be used in the majority
-# of cases. "shared" should be used if multiple instances of this process can exist
-# simultaneously; e.g. in a containerized runtime environment.
+## Scope of response cache. "in-process" is the default, and can be used in the majority
+## of cases. "shared" should be used if multiple instances of this process can exist
+## simultaneously; e.g. in a containerized runtime environment.
 async.response_cache.scope=in-process
 #async.response_cache.scope=shared
 
-# Creates an in-memory h2 database called, and executes DDL in "data.sql"
-# to create a schema and objects.
+## Creates an in-memory h2 database called, and executes DDL in "data.sql"
+## to create a schema and objects.
 spring.datasource.url=jdbc:h2:mem:framework-demo-db;INIT=runscript from 'classpath:data.sql'
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# The following line prevents annotation-based generation of schema
-# objects (e.g. tables), instead deferring DDL to script referenced
-# after "INIT=" prefix in "spring.datasource.url" property.
+## The following line prevents annotation-based generation of schema
+## objects (e.g. tables), instead deferring DDL to script referenced
+## after "INIT=" prefix in "spring.datasource.url" property.
 spring.jpa.hibernate.ddl-auto=none
 
-# Enables the h2 console, browsable at http://localhost:8080/h2-console.
+## Enables the h2 console, browsable at http://localhost:8080/h2-console.
 spring.h2.console.enabled=true
 
-# TLS settings
+## TLS settings
 #server.ssl.key-store=classpath:framework-keystore.pfx
 #server.ssl.key-store-type=pkcs12
 #server.ssl.key-store-password=blah123
@@ -28,11 +28,13 @@ spring.h2.console.enabled=true
 #server.ssl.key-password=blah123
 #server.ssl.key-alias=medium
 
-# Actuator endpoints
+## Actuator endpoints
 management.port=8081
 management.security.enabled=false
 
-# Framework Demo-specific properties
-framework-demo.breach-api-uri-root=https://api.pwnedpasswords.com/range/
-framework-demo.breach-api-hash-algo=SHA-1
-framework-demo.bcrypt-strength=12
+## Framework-specific properties
+## Password breach API properties
+#framework.breach-api-uri-root=https://api.pwnedpasswords.com/range/
+#framework.breach-api-hash-algo=SHA-1
+## Password hash work-factor (default is 12)
+#framework.hash-work-factor=12
