--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "//": "Remove NG_BUILD_DIFFERENTIAL_FULL=true on Windows; i.e., should just be 'ng build'",
     "build": "NG_BUILD_DIFFERENTIAL_FULL=true ng build",
     "test": "ng test",
     "lint": "ng lint",
